--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <title>Inventory</title>
 </head>
@@ -16,12 +17,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div id="status"></div>
+
+            <div class="text-right" id="status"></div>
+
+            <h1>Inventory</h1>
+
+            <h3>Machines</h3>
             <table class="table table-striped" id="machines">
-                <tr>
-                    <td>ID</td>
-                    <td>Public IP</td>
-                </tr>
+                <tr></tr>
             </table>
         </div>
     </div>
