--- a/ui/index.html
+++ b/ui/index.html
@@ -55,9 +55,10 @@
             </div>
         </div>
     </div>
+</div>
 
 
-    <script src="js/app.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
