Display bars of latency

--- a/ui/index.html
+++ b/ui/index.html
@@ -64,7 +64,11 @@
                             <tr></tr>
                         </table>
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="connections"></div>
+                    <div role="tabpanel" class="tab-pane" id="connections">
+                        <table class="table table-bordered" id="connections_tab">
+                            <tr></tr>
+                        </table>
+                    </div>
 
                 </div>
             </div>
