Legend the graph

--- a/ui/index.html
+++ b/ui/index.html
@@ -78,6 +78,10 @@
                             </g>
                             <g class="labels y-labels" id="latency-labels">
                             </g>
+                            <g class="labels" id="fixed-labels">
+                                <text x="400" y="540">Seconds Ago</text>
+                                <text x="0" y="250">Ms</text>
+                            </g>
                             <g class="data" data-setname="Latency" id="latency-data">
                             </g>
                         </svg>
