--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/index.css">
 
+    <script src="js/progress_bar.js"></script>
+    <script src="js/connections-view.js"></script>
+    <script src="js/connections-compute.js"></script>
     <script src="js/app.js"></script>
+
 
     <title>Inventory</title>
 </head>
@@ -79,7 +83,7 @@
                             <g class="labels y-labels" id="latency-labels">
                             </g>
                             <g class="labels" id="fixed-labels">
-                                <text x="400" y="540">Seconds Ago</text>
+                                <text x="400" y="540">Seconds</text>
                                 <text x="0" y="250">Ms</text>
                             </g>
                             <g class="data" data-setname="Latency" id="latency-data">
